:meat_on_bone: WIP on #256 achieved a better layout, still work to do: make sure the other layout patterns viz. the columns arent blown up do a better job of calculating the distance to push the main column over from the edge of the viewport w/ respect to logo probably going to have to adjust again to account for logo truncation at < 1024px

--- a/docs/css/example-search-styles.css
+++ b/docs/css/example-search-styles.css
@@ -814,9 +814,9 @@ dl dd.multi-item-list .nypl-basic-table,
   border-radius: 0;
   display: inline-block;
   fill: #080807;
-  height: 2.81667rem;
+  height: 8.96498rem;
   speak: none;
-  width: 5rem; }
+  width: 16rem; }
   .nypl-logo-rev.reversed {
     background-color: inherit;
     fill: #fff; }
@@ -3210,8 +3210,8 @@ dl dd.multi-item-list .nypl-basic-table,
       content: ""; }
 
 .nypl-full-width-wrapper {
-  max-width: calc(81rem - (6rem));
-  padding: 1rem 1rem 1rem 6rem;
+  max-width: calc(81.1875rem - (9rem));
+  padding: 1rem 1rem 1rem 9rem;
   position: relative;
   margin: 0 auto; }
   .nypl-full-width-wrapper::before, .nypl-full-width-wrapper::after {
@@ -4604,24 +4604,24 @@ dl dd.multi-item-list .nypl-basic-table,
       float: none;
       margin: 1rem 0.5rem 1.5rem 0;
       position: relative;
-      width: 2.81667rem; } }
+      width: 8.96498rem; } }
 .nypl-header .nypl-logo {
   border: 0;
   display: block;
   font-size: 0;
-  height: 2.81667rem;
+  height: 8.96498rem;
   margin-top: 1rem;
   margin-bottom: 0.1rem;
-  width: 5rem; }
+  width: 16rem; }
   .nypl-header .nypl-logo svg {
-    height: 2.81667rem;
-    width: 5rem; }
+    height: 8.96498rem;
+    width: 16rem; }
   @media (max-width: 965px) {
     .nypl-header .nypl-logo {
       margin: 0;
       margin-right: 0.5rem;
       overflow: hidden;
-      width: 2.81667rem; }
+      width: 8.96498rem; }
       .nypl-header .nypl-logo .wordmark {
         display: none; } }
 .nypl-header .content {
@@ -4645,7 +4645,7 @@ dl dd.multi-item-list .nypl-basic-table,
     display: table;
     width: 100%; } }
 .nypl-header .nypl-full-width-wrapper {
-  max-width: calc(82rem - (2rem));
+  max-width: calc(82.1875rem - (1rem * 2));
   padding: 0 1rem;
   position: relative;
   margin: 0 auto; }
@@ -5102,7 +5102,7 @@ dl dd.multi-item-list .nypl-basic-table,
 .nypl-header .nav-buttons {
   font-size: 1.1rem;
   line-height: 1.7;
-  margin-top: calc(2.81667rem + 2rem); }
+  margin-top: calc(8.96498rem + 2rem); }
   .nypl-header .nav-buttons::before, .nypl-header .nav-buttons::after {
     content: "";
     display: table; }
