--- a/sass/_measurements.scss
+++ b/sass/_measurements.scss
@@ -5,7 +5,7 @@ $basefont: $basefontraw * 1px;
 $small-type: ($basefont * 0.9);
 
 // page measures
-$max-width-raw: 1312;
+$max-width-raw: 1315;
 $max-width: ($max-width-raw / $basefontraw) * 1rem; // in rems
 
 // breakpoints
@@ -13,12 +13,20 @@ $intermediate-breakpoint: 1120px;
 $mobile-breakpoint: 965px;
 $xtrasmall-breakpoint: 483px;
 
-// borders
+
+
+///
+/// borders
+///
 $focus-width: (2 / $basefontraw) * 1rem;
 $related-links-border-width: 0.25rem;
 $simple-border: (1 / $basefontraw) * 1rem;
 
-// grid measures
+
+
+///
+/// grid measures
+///
 $full-width: 100%;
 $one-quarter: $full-width / 4;
 $one-third: $full-width / 3;
@@ -31,14 +39,33 @@ $general-margin: $general-padding;
 $general-border-radius: 0.2rem;
 $general-border-width: ($simple-border * 2);
 
-// animation timing
+
+
+///
+/// animation timing
+///
 $hover-time: 0.1s;
 
-// header numbers
-$logo-ratio: 169 / 300;
-$logo-width-raw: 5;
+
+
+///
+/// header numbers
+/// Be advised that much of the DTK's calculations are based on the Header defined herein, NOT the Global Header React Appliction that is in production
+///
+$logo-ratio: 144 / 257;
+$logo-width-raw: 16;
 $logo-width: $logo-width-raw * 1rem;
 $logo-height-raw: $logo-width-raw * $logo-ratio;
 $logo-height: $logo-height-raw * 1rem;
 $collapsed-service-height: 10px;
 $collapsed-nav-height: 30px;
+
+///
+/// These values are based on the current implementation of the logo in the React App header.
+$logo-type-width-raw: 112 / $basefontraw;
+$logo-type-width: $logo-type-width-raw * 1rem;
+$logo-mark-width-raw: 96 / $basefontraw;
+$logo-mark-width: $logo-mark-width-raw * 1rem;
+
+/// the gap between the logomark and logotype
+$logo-gap-between: $logo-type-width - $logo-mark-width;
